<resources>
    <string name="app_name">다 했나요?</string>
    <string name="feed_snack">간식주기</string>
    <string name="caring_pet">돌보기</string>
    <string name="pet">동물</string>
    <string name="calendar">달력</string>
    <string name="coin">Coin</string>
    <string name="save">저장</string>
    <string name="todo_content">일정 내용</string>
    <string name="todo_name">일정 제목</string>
    <string name="exampleSelectedDate">선택 날짜</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="loading">loading..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store">상점</string>
    <string name="use">사용</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="price">가격</string>
    <string name="buying">구매</string>
    <string name="itemName">이름</string>
    <string name="itemInfo">상세 정보</string>
    <string name="won">ⓒ</string>
</resources>
